<resources>
    <string name="app_name">InSMART</string>
    <string name="something_went_wrong_please_contact_admin">Something went wrong. Please contact admin!</string>
    <string name="logout">Logout</string>
    <string name="collection_report">Collection Report</string>
    <string name="scan">Scan</string>
    <string name="card_number">Card Number</string>
    <string name="submit">Submit</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="scan_again">Scan Again</string>
    <string name="app_will_not_work_without_camera_permission">App will not work without camera permission</string>
    <string name="login">Login</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp_here">Enter OTP here</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="change_number">Change Number</string>
    <string name="waiting_for_otp_to_verify_your_phone_number">Waiting for otp to verify your phone number</string>
    <string name="otp_verification_attempt_failed_nplease_retry_or_try_changing_phone_number">OTP verification attempt failed. \nPlease retry or try changing phone number.</string>
    <string name="retry">Retry</string>
    <string name="insmart">InSMART</string>
    <string name="enter_user_name">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="no_recodrs_found_for_the_qr_code">No records found for the Qr code</string>
    <string name="scan_qr">Scan QR</string>
    <string name="user_profile">User Profile</string>
    <string name="user_photo_field">user photo field</string>

    <!--Attendance update alert constants-->
    <string name="attendance_updated_successfully">Attendance updated successfully</string>
    <string name="attendance_update_failed">Attendance update failed</string>

    <!--Report related constants-->
    <string name="report_fetch_failed">Report fetch failed</string>
    <string name="quorum_report">Quorum Report</string>
    <string name="reg_fee_amount">Reg Fee Amount</string>
    <string name="member_count">Member Count</string>
    <string name="laymen_count">Laymen Count</string>
    <string name="clergy_present_count">Clergy Present Count</string>
    <string name="clergy_count">Clergy Count</string>
    <string name="laymen_present_count">Laymen Present Count</string>
    <string name="total_member_count">Total Member Count</string>
    <string name="present_member_count">Present Member Count</string>
    <string name="quorum_percentage">Quorum Percentage</string>
    <string name="clergy_perc">Clergy Percentage</string>
    <string name="laymen_perc">Laymen Percentage</string>

    <!--Network not available alert-->
    <string name="not_connected_to_network">Not connected to network</string>

    <!--User profile field values-->
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="reg_no">Reg No</string>
    <string name="parish">Parish</string>
    <string name="reg_fee">Reg Fee</string>
    <string name="diocese">Diocese</string>

    <!--Invalid qr scan alert-->
    <string name="no_user_existing_in_our_database_with_the_given_qr_code">No user existing in our database with the given Qr Code</string>

    <!--Attendance already updated in server, again scanning the updated one-->
    <string name="profile_already_marked_as_present">Profile already marked as Present</string>
</resources>
