<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_reject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/reject"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_approve"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_approve"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_approve_button_user_details"
        android:text="@string/approve"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_reject" />

    <ScrollView
        android:id="@+id/scroll_view_user_detail_pane"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_approve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_user_pic"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/user_photo_field" />

            <TextView
                android:id="@+id/text_view_profile_present_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:background="@color/light_grey"
                android:gravity="center"
                android:visibility="gone"
                android:padding="@dimen/small_padding"
                android:text="@string/profile_already_marked_as_present"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/text_size_normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/style_text_view_hint_user_profile"
                    android:text="@string/reg_no" />

                <TextView
                    android:id="@+id/text_view_user_reg_no"
                    style="@style/style_text_view_data_user_profile"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/style_text_view_hint_user_profile"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/text_view_user_name"
                    style="@style/style_text_view_data_user_profile"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/style_text_view_hint_user_profile"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/text_view_user_address"
                    style="@style/style_text_view_data_user_profile" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/style_text_view_hint_user_profile"
                    android:text="@string/parish" />

                <TextView
                    android:id="@+id/text_view_user_parish"
                    style="@style/style_text_view_data_user_profile" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/style_text_view_hint_user_profile"
                    android:text="@string/diocese" />

                <TextView
                    android:id="@+id/text_view_user_diocese"
                    style="@style/style_text_view_data_user_profile" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/style_text_view_hint_user_profile"
                    android:text="@string/reg_fee" />

                <TextView
                    android:id="@+id/text_view_user_reg_fee"
                    style="@style/style_text_view_data_user_profile"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/text_view_no_user_existing"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/no_user_existing_in_our_database_with_the_given_qr_code"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/text_size_extra_large"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_approve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
